# bcsc-api/src/gen/java/io/swagger/api/CanineApiService.java
@@ -15,8 +15,8 @@ import java.io.InputStream;
 import javax.ws.rs.core.Response;
 import javax.ws.rs.core.SecurityContext;
 import javax.validation.constraints.*;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2018-04-20T00:28:28.441Z")
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2018-04-21T14:06:47.951Z")
 public abstract class CanineApiService {
-    public abstract Response findLotIngreds( @NotNull String lotNumber,SecurityContext securityContext) throws NotFoundException;
+    public abstract Response findLotTree( @NotNull String lotNumber,SecurityContext securityContext) throws NotFoundException;
     public abstract Response findManLots( String fromDate, String toDate, Integer range,SecurityContext securityContext) throws NotFoundException;
 }
